--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.Light">
         <activity
+            android:name=".CameraActivity"
+            android:exported="false" />
+        <activity
             android:name=".CalculateActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true">
@@ -20,4 +23,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
